[project]
name = "mcp"
version = "0.1.0"
description = "Model Context Protocol for GitHub and Notion integration"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "notion-client>=2.0.0",
]

[project.optional-dependencies]
cli = [
    "click>=8.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"